update missing componenets in dockerfile